briefly-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: briefly
spec:
  selector:
    app: briefly
  ports:
    - port: 80
      targetPort: 5000
