briefly-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: briefly
spec:
  defaultBackend:
    service:
      name: briefly
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - briefly
